# error_dashboard_sdk_rust

./: Cargo.toml  LICENSE  README.md
src/: client.rs  configuration.rs  error_tracker.rs  fetch.rs  lib.rs
