[package]
name = "error_dashboard_rust"
authors = ["Derek Li derekli11204@gmail.com"]
version = "0.1.0"
edition = "2021"
description = "A Rust library for error tracking and reporting to a dashboard."
license = "MIT"
homepage = "https://higuard-error-dashboard.shuttleapp.rs"
repository = "https://github.com/HiQ-Apps/error_dashboard_sdk_rust"
readme = "README.md"

[dependencies]
async-trait = "0.1.81"
once_cell = "1.19.0"
reqwest = "0.12.7"
serde = "1.0.209"
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = "1.40.0"
